[package]
name = "any_cards"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card_format = {path="../card_format/"}
clap_conf = {path="../../mlibs/clap_conf/"}
handlebars = "3.0.1"
failure = "0.1.7"
mksvg = {path="../../mlibs/mksvg/"}
